updated Lab10 added companyUpdate

--- a/views/company/company_view_all1.ejs
+++ b/views/company/company_view_all1.ejs
@@ -6,13 +6,20 @@
     <body>
         <h1>Companies</h1>
         <table border="1">
-            <th>ID</th>
             <th>Name</th>
-
-            <% for(i = 0; i < companies.length; i++) { %>
+            <th>Actions</th>
+            <% for(var i = 0; i < companies.length; i++) { %>
             <tr>
-                <td><%= companies[i].company_id %></td>
-                <td><%= companies[i].company_name %></td>
+                <td>
+                    <a href="company/?company_id= <%= companies[i].company_id %>">
+                        <%= companies[i].company_name %>
+                    </a>
+                </td>
+                <td>
+                    <a href="/company/edit/?company_id<%= companies[i].company_id %>">
+                        Edit
+                    </a>
+                </td>
             </tr>
             <% } %>
         </table>
