lab10 added edit page to account address company and skill

--- a/views/account/account_view_all.ejs
+++ b/views/account/account_view_all.ejs
@@ -5,20 +5,28 @@
 </head>
     <body>
         <h1>Accounts</h1>
+        <a href="account/add">Add New Account</a>
+        <br>
 
         <table border="1">
             <th>ID</th>
             <th>Email</th>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Actions</th>
 
-            <% for(i = 0; i < account.length; i++) { %>
+            <% for(var i = 0; i < account.length; i++) { %>
 
             <tr>
                 <td><%= account[i].account_id %></td>
                 <td><%= account[i].email %></td>
                 <td><%= account[i].first_name %></td>
                 <td><%= account[i].last_name %></td>
+                <td>
+                    <a href="/account/edit/?account_id=<%= account[i].account_id %>">
+                        Edit
+                    </a>
+                </td>
             </tr>
             <% } %>
         </table>
