--- a/views/address/address_view_all.ejs
+++ b/views/address/address_view_all.ejs
@@ -5,17 +5,24 @@
 </head>
     <body>
         <h1>Addresses</h1>
-
+        <a href="/address/add">Add New Address</a>
+        <br>
         <table border="1">
             <th>ID</th>
             <th>Street</th>
             <th>Zip Code</th>
+            <th>Actions</th>
 
-            <%for (i = 0; i < addresses.length; i++) {%>
+            <%for (var i = 0; i < addresses.length; i++) {%>
             <tr>
                 <td><%= addresses[i].address_id %></td>
                 <td><%= addresses[i].street %></td>
                 <td><%= addresses[i].zip_code %></td>
+                <td>
+                    <a href="/address/edit/?address_id=<%= addresses[i].address_id %>">
+                        Edit
+                    </a>
+                </td>
             </tr>
             <% } %>
         </table>
