--- a/views/skill/skill_view_all.ejs
+++ b/views/skill/skill_view_all.ejs
@@ -5,17 +5,24 @@
 </head>
 <body>
 <h1>Skills</h1>
-
+<a href="/skill/add">Add New Skill</a>
+<br>
 <table border="1">
     <th>ID</th>
     <th>Skill Name</th>
     <th>Description</th>
+    <th>Actions</th>
 
-    <% for( i = 0; i < skills.length; i++){ %>
+    <% for(var i = 0; i < skills.length; i++){ %>
     <tr>
         <td><%= skills[i].skill_id %></td>
         <td><%= skills[i].skill_name %></td>
         <td><%= skills[i].description %></td>
+        <td>
+            <a href="/skill/edit/?skill_id=<%= skills[i].skill_id %>">
+                Edit
+            </a>
+        </td>
     </tr>
     <% } %>
 </table>
