--- a/views/company/companyUpdate.ejs
+++ b/views/company/companyUpdate.ejs
@@ -5,8 +5,10 @@
 </head>
 <body>
 <h1>Add New Company</h1>
-<form action="/company/insert" method="get">
-    Company Name: <input id="company_name" name="company_name" value ="<%company.company_name%>">
+<form action="/company/update" method="get">
+    <input type="hidden" id="company_id" name="company_id" value = "<%= company.company_id %>">
+
+    Company Name: <input id="company_name" name="company_name" value ="<%= company.company_name%>">
     <br>
     Address
     <br>
