--- a/views/school/school_add.ejs
+++ b/views/school/school_add.ejs
@@ -9,6 +9,16 @@
         <form action="/school/insert" method="get">
             School Name: <input name="school_name">
             <br>
+            Address:
+            <select>
+                <% for (var i = 0; address_result.length > i; i++) { %>
+                <option value="<% address_result[i].address_id %>">
+                    <%= address_result[i].street + ', ' + address_result[i].zip_code %>
+                </option>
+                <br>
+                <% }%>
+            </select>
+            <br>
             <input type="submit">
         </form>
     </body>
