Lab 12 part 1 created views for resume add, resume select user, resume view all, also created/updated resume dal and resume route.

--- a/views/resume/resume_view_all.ejs
+++ b/views/resume/resume_view_all.ejs
@@ -11,11 +11,15 @@
     <th>First Name</th>
     <th>Last Name</th>
     <th>Resume Name</th>
+    <th>Actions</th>
+    <% for (var i = 0; i < resumes.length; i++) { %>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><%= resumes[i].first_name %></td>
+        <td><%= resumes[i].last_name %></td>
+        <td><%= resumes[i].resume_name %></td>
+        <td><a href="">Edit</a> <a href="">Delete</a></td>
     </tr>
+    <% } %>
 </table>
 </body>
 </html>
