--- a/views/resume/resume_add.ejs
+++ b/views/resume/resume_add.ejs
@@ -6,13 +6,15 @@
     <body>
         <h1>Resume - Add</h1>
         <form action="/resume/insert" method="get">
-            <input type="hidden" id="account_id" value="<%= account_id %>">
+            <input type="hidden" id="account_id" name="account_id" value="<%= account_id %>">
 
             Resume Name:
                 <input name="resume_name">
             <br>
+            <br>
 
             Skills
+            <br>
             <%for (var i = 0; i < skills.length; i++) { %>
                 <input type="checkbox" name="skill_id" value="<%= skills[i].skill_id %>">
                     <%= skills[i].skill_name %>
@@ -20,21 +22,26 @@
 
             <% } %>
             <br>
+            <br>
 
             Schools
+            <br>
             <%for (var i = 0; i < schools.length; i++) { %>
                 <input type="checkbox" name="school_id" value="<%= schools[i].school_id %>">
                     <%= schools[i].school_name %>
                 </input>
             <% } %>
             <br>
+            <br>
 
             Companies
+            <br>
             <%for (var i = 0; i < companies.length; i++) { %>
                 <input type="checkbox" name="company_id" value="<%= companies[i].company_id %>">
                     <%= companies[i].company_name %>
                 </input>
             <% } %>
+            <br>
             <br>
             <input type="submit">
         </form>
