--- a/views/resume/resumeUpdate.ejs
+++ b/views/resume/resumeUpdate.ejs
@@ -18,39 +18,64 @@
     <input type="hidden" id="resume_id" name="resume_id" value="<%= resume_id %>">
 
     Resume Name:
-    <input name="resume_name">
+    <input name="resume_name" <% if(locals.was_successful) { %> value="<%= resumeInfo.resume_name %>">
+    <% }else{%>
+    >
+    <% } %>
+    </input>
+
     <br>
     <br>
 
     Skills
     <br>
-    <%for (var i = 0; i < skills.length; i++) { %>
-    <input type="checkbox" name="skill_id" value="<%= skills[i].skill_id %>">
+    <%for (var i = 0; i < skills.length; i++) {
+       var checked = "";
+
+        if(skills[i].resume_id != null) {
+            checked = "checked";
+        }
+    %>
+    <input type="checkbox" name="skill_id" <%= checked %> value="<%= skills[i].skill_id %>">
     <%= skills[i].skill_name %>
     </input>
-
-    <% } %>
     <br>
+    <% } %>
+
     <br>
 
     Schools
     <br>
-    <%for (var i = 0; i < schools.length; i++) { %>
-    <input type="checkbox" name="school_id" value="<%= schools[i].school_id %>">
+    <%for (var i = 0; i < schools.length; i++) {
+        var checked = "";
+
+        if(schools[i].resume_id != null) {
+            checked = "checked";
+        }
+    %>
+    <input type="checkbox" name="school_id" <%= checked %> value="<%= schools[i].school_id %>">
     <%= schools[i].school_name %>
     </input>
-    <% } %>
     <br>
+    <% } %>
+
     <br>
 
     Companies
     <br>
-    <%for (var i = 0; i < companies.length; i++) { %>
-    <input type="checkbox" name="company_id" value="<%= companies[i].company_id %>">
+    <%for (var i = 0; i < companies.length; i++) {
+        var checked = "";
+
+        if(companies[i].resume_id != null) {
+            checked = "checked";
+        }
+    %>
+    <input type="checkbox" name="company_id" <%= checked %> value="<%= companies[i].company_id %>">
     <%= companies[i].company_name %>
     </input>
-    <% } %>
     <br>
+    <% } %>
+
     <br>
     <input type="submit">
 </form>
