--- a/views/address/address_view_all.ejs
+++ b/views/address/address_view_all.ejs
@@ -5,6 +5,25 @@
 </head>
     <body>
         <h1>Addresses</h1>
+        <% if(locals.was_successful) { %>
+        <div class="col-md-12">
+            <div id="message" class="alert alert-success col-md-4">
+                Address ID <%= address_id %> was successfully deleted.
+                <br>
+            </div>
+        </div>
+        <% }else { %>
+        <div class="col-md-12">
+            <div id="message" class="alert alert-danger col-md-4">
+                Failed to delete address ID <%= address_id %>.
+                <br>
+                <br>
+                <%#= error %>
+                <br>
+            </div>
+        </div>
+        <% } %>
+
         <a href="/address/add">Add New Address</a>
         <br>
         <table border="1">
@@ -21,6 +40,9 @@
                 <td>
                     <a href="/address/edit/?address_id=<%= addresses[i].address_id %>">
                         Edit
+                    </a>
+                    <a href="/address/delete/?address_id=<%= addresses[i].address_id %>">
+                        Delete
                     </a>
                 </td>
             </tr>
